# serial_link

./: .generated  .gitignore  .gitlab-ci.yml  .iis_env  404.html  Bender.yml  CHANGELOG.md  Makefile  README.md  REUSE.toml  Some personal notes.md  analyzePerformance.tcl  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt  script_test.tcl  slink.mk
.github/: dependabot.yml
LICENSES/: Apache-2.0.txt
benchmarking/: benchmarking_results.ods  benchmarking_template.ods
channel_allocator/: index.html
constraints/: index.html
data_link_layer/: index.html
doc/: README.md  constraints.md  physical_layer.md  protocol_layer.md
models/: configurable_delay.fpga.sv
network_layer/: index.html
physical_layer/: index.html
search/: search_index.json
src/: axi_serial_link.sv  axi_serial_link_occamy_wrapper.sv  dequeue_shift_register.sv  enqueue_register.sv  floo_axis_noc_bridge.sv  floo_axis_noc_bridge_narrow_wide.sv  floo_axis_noc_bridge_virtual_channels.sv  floo_axis_noc_bridge_virtual_channels_narrow_wide.sv  floo_axis_noc_bridge_withArbitration.sv  floo_serial_link.sv  floo_serial_link_narrow_wide.sv  floo_serial_link_narrow_wide_synth_wrapper.sv  floo_serial_link_occamy_wrapper.sv  insert_latency_to_signal.sv  noc_bridge_narrow_wide_pkg.sv  noc_bridge_pkg.sv  serial_link.sv  serial_link_axi_network.sv  serial_link_benchmarking_unit.sv  serial_link_credit_synchronization.sv  serial_link_data_link.sv  serial_link_floo_network.sv  serial_link_floo_nw_network.sv  serial_link_floo_nw_vc_network.sv  serial_link_floo_vc_network.sv  serial_link_isolate.sv  (+16 more)
(+74 files in other folders)
