# Copyright 2022 ETH Zurich and University of Bologna.
# Solderpad Hardware License, Version 0.51, see LICENSE for details.
# SPDX-License-Identifier: SHL-0.51

[project]
name = "serial_link"
version = "0.1.0"
description = "A simple, scalable, source-synchronous, all-digital DDR link"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mako>=1.3.10",
    "peakrdl>=1.5.0",
    "peakrdl-rawheader",
]

[tool.uv.sources]
peakrdl-rawheader = { git = "https://github.com/micprog/PeakRDL-rawheader.git" }
